--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
   <h1>this is my app</h1>
   <p>first change to be commited</p>
+  <form action="">
+    Login form
+
+  </form>
 </body>
 
 </html>
